Publish document with call for wide review

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </section>
 
     <section id="sotd">
-      <p>This document is not complete. It is subject to major changes and,
-      while early experimentations are encouraged, it is therefore not
-      intended for implementation.</p>
+      <p>The WebRTC and Device and Sensors Working Group intend to publish this specification as a Candidate Recommendation soon. Consequently, this is a Request for wide review of this document.</p>
     </section>
 
     <section class="informative" id="intro">
