--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     readonly        attribute DOMString sinkId;
     Promise&lt;void&gt; setSinkId (DOMString sinkId);
 };</pre><section><h2>Attributes</h2><dl data-link-for="HTMLMediaElement" data-dfn-for="HTMLMediaElement" class="attributes"><dt><dfn><code>sinkId</code></dfn> of type <span class="idlAttrType"><a>DOMString</a></span>, readonly       </dt><dd>
-        The unique ID of the audio device through which output is being delivered, or empty string if it is using the user agent default. This ID should be equal to the <a href="https://w3c.github.io/mediacapture-main/#dom-mediadeviceinfo-deviceid"><code>deviceId</code></a> attribute of one of the <a href="https://w3c.github.io/mediacapture-main/#idl-def-mediadeviceinfo"><code>MediaDeviceInfo</code></a> values returned from <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-enumeratedevices"><code>MediaDevices.enumerateDevices()</code></a> [[!GETUSERMEDIA]], or one of the predefined IDs listed below.
+        The unique ID of the audio device through which output is being delivered, or the empty string if it is using the user agent default. This ID should be equal to the <a href="https://w3c.github.io/mediacapture-main/#dom-mediadeviceinfo-deviceid"><code>deviceId</code></a> attribute of one of the <a href="https://w3c.github.io/mediacapture-main/#idl-def-mediadeviceinfo"><code>MediaDeviceInfo</code></a> values returned from <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-enumeratedevices"><code>MediaDevices.enumerateDevices()</code></a> [[!GETUSERMEDIA]], or one of the predefined IDs listed below.
         </dd></dl></section><section><h2>Methods</h2><dl data-link-for="HTMLMediaElement" data-dfn-for="HTMLMediaElement" class="methods"><dt><dfn><code>setSinkId</code></dfn></dt><dd>
         Sets the ID of the audio device through which audio output should be rendered if the application is <a href="#privacy-considerations">authorized</a> to play out of a given device.
           
@@ -50,12 +50,12 @@
         <li><p>Let <var>promise</var> be a new promise.</p></li>
         <li><p>Run the following substeps in parallel:</p>
           <ol>
-            <li><p>If <code>sinkId</code> does not match any audio output device identified by the result the would be provided by <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-enumeratedevices"><code>enumerateDevices()</code></a>, reject <var>promise</var> with a new <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#notfounderror"><code>NotFoundError</code></a> and abort these substeps.</p></li>
-            <li><p>If application is not authorized to play audio through the device identified by <code>sinkId</code>, reject <var>promise</var> with a new <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#securityerror"><code>SecurityError</code></a> and abort these substeps.</p></li>
+            <li><p>If <code>sinkId</code> does not match any audio output device identified by the result that would be provided by <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-enumeratedevices"><code>enumerateDevices()</code></a>, reject <var>promise</var> with a new <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#notfounderror"><code>NotFoundError</code></a> and abort these substeps.</p></li>
+            <li><p>If the application is not authorized to play audio through the device identified by <code>sinkId</code>, reject <var>promise</var> with a new <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#securityerror"><code>SecurityError</code></a> and abort these substeps.</p></li>
             <li><p>Switch the underlying output device for the media element to the device identified by <code>sinkId</code>.
             <p class="note">If this substep is successful and the media element's <a href="http://www.w3.org/TR/html5/embedded-content-0.html#dom-media-paused"><code>paused</code></a> attribute is false, audio will stop playing out of the device represented by the element's <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute and will start playing out of the device identified by <code>sinkId</code></p></li>
             <li><p>If the preceding substep failed, reject <var>promise</var> with a new <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#aborterror"><code>AbortError</code></a> and abort these substeps.</p></li>
-            <li><p>Update the internal state of the media element so that the value of its <a  data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute corresponds to <code>sinkId</code>.</p></li>
+            <li><p>Update the internal state of the media element so that the value of its <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute corresponds to <code>sinkId</code>.</p></li>
             <li><p>Resolve <var>promise</var>.</p></li>
           </ol>
         </li>
@@ -66,8 +66,8 @@
         <h3>Algorithms</h3>
         <section id="algorithms-sink-unavailable">
           <h4>Sink no longer available</h4>
-          <p>The audio device identified by a media element's <a  data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute may become unavailable, for example, if it is unplugged.</p>
-          <p>When the audio device identified by the <a  data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute is no longer available, the user agent must take no action. For example, if the media element's <a href="http://www.w3.org/TR/html5/embedded-content-0.html#dom-media-paused"><code>paused</code></a> attribute is false when the device identified by the sinkId is no longer available, then playback will continue as normal. In this case, audio will not be rendered because the device to which the media element is attached is unavailable.</p>
+          <p>The audio device identified by a media element's <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute may become unavailable, for example if it is unplugged.</p>
+          <p>When the audio device identified by the <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute is no longer available, the user agent must take no action. For example, if the media element's <a href="http://www.w3.org/TR/html5/embedded-content-0.html#dom-media-paused"><code>paused</code></a> attribute is false when the device identified by the sinkId is no longer available, then playback will continue as normal. In this case, audio will not be rendered because the device to which the media element is attached is unavailable.</p>
           <p>
             <em>The following paragraph is non-normative.</em>
           </p>
@@ -75,11 +75,11 @@
         </section>
         <section id="algorithms-new-sink-available">
           <h4>New sink available</h4>
-          <p>New audio devices may become available to the user agent, or an audio device (identified by a media element's <a  data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute) that had previously become <a href="#algorithms-sink-unavailable">unavailable</a> may become available again, for example, if it is unplugged and later plugged back in.</p>
+          <p>New audio devices may become available to the user agent, or an audio device (identified by a media element's <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute) that had previously become <a href="#algorithms-sink-unavailable">unavailable</a> may become available again, for example, if it is unplugged and later plugged back in.</p>
           <p>In this scenario, the user agent must run the following steps:</p>
           <ol class="method-algorithm">
             <li><p>Let <var>sinkId</var> be the identifier for the newly available device.</p></li>
-            <li><p>For each media element whose <a  data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute is equal to <var>sinkId</var>:</p>
+            <li><p>For each media element whose <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute is equal to <var>sinkId</var>:</p>
               <ol>
                 <li><p>If the media element's <a href="http://www.w3.org/TR/html5/embedded-content-0.html#dom-media-paused"><code>paused</code></a> attribute is false, start rendering this object's audio out of the device represented by the <a data-link-for="HTMLMediaElement"><code>sinkId</code></a> attribute.</p></li>
               </ol>
@@ -146,7 +146,7 @@
         non-default output devices; the details of this process are left to the implementation.
         For example, one approach could be to add an explicit user prompt of the form
         "example.com wants to access all your sound output devices".</p>
-        <p>However, implementations must support implicit consent via the <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-getusermedia"><code>getUserMedia()</code></a> permission prompt; when an audio input device is authorized and opened via <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-getusermedia"><code>getUserMedia()</code></a>, this also authorizes access to any associated audio output devices (i.e., those with the same <a href="https://w3c.github.io/mediacapture-main/#dom-mediadeviceinfo-groupid"><code>groupId</code></a>). This conviently handles the common case of wanting to route both input and output audio through a headset or speakerphone device.</p>
+        <p>However, implementations MUST support implicit consent via the <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-getusermedia"><code>getUserMedia()</code></a> permission prompt; when an audio input device is authorized and opened via <a href="https://w3c.github.io/mediacapture-main/#dom-mediadevices-getusermedia"><code>getUserMedia()</code></a>, this also authorizes access to any associated audio output devices (i.e., those with the same <a href="https://w3c.github.io/mediacapture-main/#dom-mediadeviceinfo-groupid"><code>groupId</code></a>). This conveniently handles the common case of wanting to route both input and output audio through a headset or speakerphone device.</p>
       </section>
     </section>
 
