Clarify in intro that this applies to AudioContext too
close #48

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="informative" id="intro">
     <h2>Introduction</h2>
     <p>This proposal allows JavaScript to direct the audio output of a media
-    element to authorized devices other than the system or user agent default.
+    element or an <a href="http://webaudio.github.io/web-audio-api/#the-audiocontext-interface"><code>AudioContext</code></a> [[!WEBAUDIO]] to authorized devices other than the system or user agent default.
     This can be helpful in a variety of real-time communication scenarios as
     well as general media applications. For example, an application can use
     this API to programmatically direct output to a device such as a Bluetooth
